--- a/client/login/.babelrc
+++ b/client/login/.babelrc
@@ -1,18 +1,58 @@
 {
   "presets": [
-    ["env", {
+    ["@babel/env", {
       "modules": false,
       "targets": {
         "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
       }
-    }],
-    "stage-2"
+    }, "Base Environment"],
+    ["@babel/preset-env", {
+      "useBuiltIns": "usage",
+      "corejs": 3
+    }, "Preset Environment"],
+    "@vue/babel-preset-jsx"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime"],
+  "plugins": ["@babel/transform-runtime",
+    // Stage 2
+    ["@babel/plugin-proposal-decorators", {
+      "legacy": true
+    }],
+    "@babel/plugin-proposal-function-sent",
+    "@babel/plugin-proposal-export-namespace-from",
+    "@babel/plugin-proposal-numeric-separator",
+    "@babel/plugin-proposal-throw-expressions",
+
+    // Stage 3
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-syntax-import-meta",
+    ["@babel/plugin-proposal-class-properties", {
+      "loose": false
+    }],
+    "@babel/plugin-proposal-json-strings"
+  ],
   "env": {
     "test": {
-      "presets": ["env", "stage-2"],
-      "plugins": ["transform-vue-jsx", "transform-es2015-modules-commonjs", "dynamic-import-node"]
+      "presets": [
+        "env"
+      ],
+      "plugins": ["@babel/transform-modules-commonjs", "dynamic-import-node",
+        // Stage 2
+        ["@babel/plugin-proposal-decorators", {
+          "legacy": true
+        }],
+        "@babel/plugin-proposal-function-sent",
+        "@babel/plugin-proposal-export-namespace-from",
+        "@babel/plugin-proposal-numeric-separator",
+        "@babel/plugin-proposal-throw-expressions",
+
+        // Stage 3
+        "@babel/plugin-syntax-dynamic-import",
+        "@babel/plugin-syntax-import-meta",
+        ["@babel/plugin-proposal-class-properties", {
+          "loose": false
+        }],
+        "@babel/plugin-proposal-json-strings"
+      ]
     }
   }
 }
