--- a/client/login/package.json
+++ b/client/login/package.json
@@ -19,6 +19,7 @@
     "vuex": "^3.1.3"
   },
   "devDependencies": {
+    "@mdi/font": "^5.0.45",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-e2e-nightwatch": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
@@ -38,7 +39,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "geckodriver": "^1.19.1",
-    "node-sass": "^4.12.0",
+    "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   }
