--- a/client/desktop/package.json
+++ b/client/desktop/package.json
@@ -27,6 +27,7 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "@mdi/font": "^5.0.45",
     "@vue/cli-plugin-babel": "^4.2.2",
     "@vue/cli-plugin-e2e-nightwatch": "^4.2.2",
     "@vue/cli-plugin-eslint": "^4.2.2",
