Fix maven build

--- a/server/openstorefront/openstorefront-client-desktop/pom.xml
+++ b/server/openstorefront/openstorefront-client-desktop/pom.xml
@@ -50,7 +50,7 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>npm run build (then copy)</id>
+                        <id>npm run build</id>
                         <goals>
                             <goal>npm</goal>
                         </goals>
