--- a/server/openstorefront/openstorefront-core/common/pom.xml
+++ b/server/openstorefront/openstorefront-core/common/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<artifactId>openstorefront-core</artifactId>
 		<groupId>edu.usu.sdl</groupId>
-		<version>2.12.2</version>
+		<version>${project.version}</version>
 	</parent>
 
 	<groupId>edu.usu.sdl</groupId>
 	<artifactId>openstorefront-core-common</artifactId>
-	<version>2.12.2</version>
+	<version>${project.version}</version>
 	<packaging>bundle</packaging>
 	<name>openstorefront-core-common</name>
 
