--- a/server/openstorefront/openstorefront-plugin/example/pom.xml
+++ b/server/openstorefront/openstorefront-plugin/example/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>openstorefront-plugin</artifactId>
         <groupId>edu.usu.sdl</groupId>
-        <version>2.12.2</version>
+        <version>${project.version}</version>
     </parent>
 
     <groupId>edu.usu.sdl</groupId>
     <artifactId>example</artifactId>
-    <version>2.12.2</version>
+    <version>${project.version}</version>
     <packaging>bundle</packaging>
     <name>openstorefront-plugin-example</name>
 
