--- a/server/openstorefront/openstorefront-web/pom.xml
+++ b/server/openstorefront/openstorefront-web/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<artifactId>openstorefront</artifactId>
 		<groupId>edu.usu.sdl</groupId>
-		<version>2.12.2</version>
+		<version>${project.version}</version>
 	</parent>
 
 	<groupId>edu.usu.sdl</groupId>
 	<artifactId>openstorefront-web</artifactId>
-	<version>2.12.2</version>
+	<version>${project.version}</version>
 	<packaging>war</packaging>
 	<name>openstorefront-web</name>
 
@@ -66,7 +66,7 @@
 		<dependency>
 			<groupId>com.sencha</groupId>
 			<artifactId>extjs</artifactId>
-			<version>2.12.2</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
