--- a/server/openstorefront/tinymcetextarea/pom.xml
+++ b/server/openstorefront/tinymcetextarea/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>edu.usu.sdl</groupId>
 		<artifactId>openstorefront</artifactId>
-		<version>2.12.2</version>
+		<version>${project.version}</version>
 	</parent>
 
 	<groupId>com.pointconstructor</groupId>
