Revert "Update version to use maven properties"
This reverts commit aeec3e9ca0621ac089854233b76c29c79ccab009.

--- a/server/openstorefront/openstorefront-core/service/pom.xml
+++ b/server/openstorefront/openstorefront-core/service/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<artifactId>openstorefront-core</artifactId>
 		<groupId>edu.usu.sdl</groupId>
-		<version>${project.version}</version>
+		<version>2.12.2</version>
 	</parent>
 
 	<groupId>edu.usu.sdl</groupId>
 	<artifactId>openstorefront-core-service</artifactId>
-	<version>${project.version}</version>
+	<version>2.12.2</version>
 	<packaging>bundle</packaging>
 	<name>openstorefront-core-service</name>
 
