--- a/server/openstorefront/openstorefront-client-desktop/pom.xml
+++ b/server/openstorefront/openstorefront-client-desktop/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>edu.usu.sdl</groupId>
         <artifactId>openstorefront</artifactId>
-        <version>${project.version}</version>
+        <version>2.12.2</version>
     </parent>
 
     <artifactId>openstorefront-client-desktop</artifactId>
