--- a/server/openstorefront/openstorefront-plugin/aerospaceimport/pom.xml
+++ b/server/openstorefront/openstorefront-plugin/aerospaceimport/pom.xml
@@ -4,12 +4,12 @@
     <parent>
         <artifactId>openstorefront-plugin</artifactId>
         <groupId>edu.usu.sdl</groupId>
-        <version>${project.version}</version>
+        <version>2.12.2</version>
     </parent>
 
     <groupId>edu.usu.sdl.spoon</groupId>
     <artifactId>aerospaceimport</artifactId>
-    <version>${project.version}</version>
+    <version>2.12.2</version>
     <packaging>bundle</packaging>
     <name>openstorefront-plugin-aerospace-importer</name>
 
