--- a/server/openstorefront/selenium-tests/pom.xml
+++ b/server/openstorefront/selenium-tests/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>edu.usu.sdl</groupId>
 		<artifactId>openstorefront</artifactId>
-		<version>${project.version}</version>
+		<version>2.12.2</version>
 	</parent>
 
 	<groupId>edu.usu.sdl</groupId>
 	<artifactId>selenium-tests</artifactId>
-	<version>${project.version}</version>
+	<version>2.12.2</version>
 	<packaging>jar</packaging>
 
 	<properties>
