--- a/server/openstorefront/openstorefront-core/service/pom.xml
+++ b/server/openstorefront/openstorefront-core/service/pom.xml
@@ -263,6 +263,31 @@
 			<version>4.1.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-imaging</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+		<dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.6</version>
+        </dependency>
+		<dependency>
+            <groupId>aspose.com</groupId>
+            <artifactId>aspose-cells</artifactId>
+            <version>8.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>aspose.com</groupId>
+            <artifactId>aspose-words</artifactId>
+            <version>16.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>aspose.com</groupId>
+            <artifactId>aspose-slides</artifactId>
+            <version>18.4.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
